@@ -159,3 +159,6 @@ Path(FILENAME).write_text("string")  # [unspecified-encoding]
 
 # Test for crash reported in https://github.com/PyCQA/pylint/issues/5731
 open(FILENAME, mode=None)  # [bad-open-mode, unspecified-encoding]
+
+# Test for crash reported in https://github.com/PyCQA/pylint/issues/6414
+open('foo', mode=2)  # [bad-open-mode, unspecified-encoding]
